:bug: Fix: fix code block scrollbar color error

--- a/assets/css/_page/_single.scss
+++ b/assets/css/_page/_single.scss
@@ -257,13 +257,11 @@
     }
 
     .table-wrapper {
-      &:not(> .lntable) {
-        overflow-x: auto;
-        --#{$prefix}scrollbar-thumb-color: #{$table-background-color};
-  
-        [data-theme='dark'] & {
-          --#{$prefix}scrollbar-thumb-color: #{$table-background-color-dark};
-        }
+      overflow-x: auto;
+      --#{$prefix}scrollbar-thumb-color: #{$table-background-color};
+
+      [data-theme='dark'] & {
+        --#{$prefix}scrollbar-thumb-color: #{$table-background-color-dark};
       }
 
       > table {
